--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eats">
 
-        <activity android:name=".view.main.MainActivity"/>
+        <activity android:name=".ui.mvp.view.MainActivity"/>
 
         <activity
-            android:name=".view.login.LoginActivity"
+            android:name=".ui.mvp.login.LoginActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
