--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix = "_dev"
+            buildConfigField "String", "BASE_URL", "\"http://192.168.43.40\""
+            buildConfigField "String", "DATABASE_NAME", "\"wonder.db\""
+            buildConfigField "long", "NETWORK_TIME_OUT", "60"
+            buildConfigField "int", "DATABASE_VERSION", "1"
+            debuggable true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -62,8 +73,9 @@ dependencies {
 
 
     // Room components
+    implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
     //Dagger 2
