--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,25 +6,29 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Eats">
+        android:theme="@style/Theme.Eats"
+        android:usesCleartextTraffic="true">
 
-        <activity android:name=".ui.mvp.view.MainActivity"/>
+        <activity android:name=".ui.mvp.registerUser.RegisterUserActivity"
+            android:screenOrientation="portrait"/>
 
-        <activity
-            android:name=".ui.mvp.login.LoginActivity"
-            android:screenOrientation="portrait">
-
+        <activity android:name=".ui.mvp.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.mvp.login.LoginActivity"
+            android:screenOrientation="portrait">
 
         </activity>
     </application>
