--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -90,6 +92,12 @@ dependencies {
 
     //PROGRESSBAR
     implementation 'com.wang.avi:library:2.1.3'
+
+    //Camera
+    implementation 'io.fotoapparat:fotoapparat:2.7.0'
+
+    //Zoomage
+    implementation 'com.jsibbold:zoomage:1.3.0'
 
 
 }
