--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,24 +8,29 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Eats"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
 
-        <activity android:name=".ui.mvp.register.RegisterActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".ui.mvp.fileChooser.FileChooserActivity" />
 
-        <!-- TODO Activity launch to initialize the app -->
-        <activity android:name=".ui.mvp.welcome.WelcomeActivity"
+        <activity
+            android:name=".ui.mvp.register.RegisterActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" /> <!-- TODO Activity launch to initialize the app -->
+
+        <activity
+            android:name=".ui.mvp.welcome.WelcomeActivity"
             android:theme="@style/splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,24 +38,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.mvp.registerUser.RegisterUserActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".ui.mvp.login.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
+
         <activity android:name=".ui.mvp.camera.CameraActivity" />
+
         <activity
             android:name=".ui.mvp.detailUser.DetailUserActivity"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.mvp.setting.SettingActivity"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.mvp.main.MainActivity"
             android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
