--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'org.mockito:mockito-core:3.+'
 
     //OKHHTP
     implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttp_version"
@@ -99,6 +100,9 @@ dependencies {
 
     //Zoomage
     implementation 'com.jsibbold:zoomage:1.3.0'
+
+    //Biometric
+    //implementation 'androidx.biometric:biometric-ktx:1.2.0-alpha0'
 
 
 }
